# C_Drive_FileSearcher

./: CMakeLists.txt  Makefile
file_search_app/: main.c
file_search_library/: file_search.c  file_search.h
